# tptorch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example_exact_tp.py
tptorch/: __init__.py
tptorch/distributions/: __init__.py  multivariate_student_t.py
tptorch/likelihoods/: __init__.py  student_t_likelihood.py
tptorch/mlls/: __init__.py  exact_student_t_marginal_log_likelihood.py
tptorch/models/: __init__.py  exact_tp.py
